# YourCartoonIs

./: .gitattributes  README.md
android/YourCartoonIs/app/: CMakeLists.txt  build.gradle
android/YourCartoonIs/app/src/androidTest/java/com/e/yourcartoonis/: ExampleInstrumentedTest.kt
android/YourCartoonIs/app/src/main/: AndroidManifest.xml
android/YourCartoonIs/app/src/main/assets/: yolov4-tiny-416.tflite
android/YourCartoonIs/app/src/main/cpp/: native-lib.cpp
android/YourCartoonIs/app/src/main/java/com/e/yourcartoonis/: AfterRecvActivity.kt  ConnectServer.kt  DragListener.kt  DragListenerSticker.kt  DragOnTarget.kt  Dummy.kt  FrameAdapter.kt  KeyFrameExtraction.kt  MainActivity.kt  (+17 more)
android/YourCartoonIs/app/src/main/res/anim/: viewscale.xml
android/YourCartoonIs/app/src/main/res/drawable/: background.xml  icon_background.xml  splash.xml
android/YourCartoonIs/app/src/main/res/drawable-v24/: button_shape.xml
android/YourCartoonIs/app/src/main/res/font/: bingre.xml
android/YourCartoonIs/app/src/main/res/layout/: activity_main.xml  activity_sub.xml  activity_video.xml  activity_video_select.xml  collage.xml  collage_001.xml  collage_002.xml  collage_3_001.xml  collage_3_002.xml  collage_3_003.xml  collage_3_004.xml  collage_4_001.xml  collage_4_002.xml  collage_4_003.xml  collage_4_004.xml  collage_4_005.xml  frame_recved.xml  griditem.xml  imview.xml  pic_transfer_result.xml  progress.xml  recv_fragment.xml  select_collage.xml  socketio.xml  stickerframeitem.xml  stickerlayout.xml
android/YourCartoonIs/app/src/main/res/values/: colors.xml  strings.xml
(+25 files in other folders)
